--- a/config.yaml
+++ b/config.yaml
@@ -23,5 +23,5 @@ md_wechat_path: './docs/wechat.md'
 # keywords to search
 keywords:
     "KWS":
-        filters: ["KWS", "Keyword Spotting","open-vocabulary","SMALL-FOOTPRINT"]
+        filters: ["Keyword Spotting","open vocabulary","noisy robust","noisy"]
    
